--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="theme.css">
 </head>
 <body>
-    <h1>gi nigga</h1>
+    <h1>gi nigga2</h1>
     <p>theresa got a new man</p>
 </body>
 </html>
