--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>gi nigga2</h1>
     <p>theresa got a new man</p>
-    <a href="(2) index.html" class="button">Go to page 2</a>
+    <a href="2.html" class="button">Go to page 2</a>
 </body>
 </html>
