--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="theme.css">
 </head>
 <body>
-    <h1>gi nigga2</h1>
-    <p>theresa got a new man</p>
+    <h1>frirst page</h1>
+    <p>continue</p>
     <a href="2.html" class="button">Go to page 2</a>
 </body>
 </html>
