--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="theme.css">
 </head>
 <body>
-    <h1>frirst page</h1>
+    <h1>first page</h1>
     <p>continue</p>
     <a href="2.html" class="button">Go to page 2</a>
 </body>
