--- a/2.html
+++ b/2.html
@@ -12,3 +12,6 @@
   <a href="index.html" class="button">Back to home</a>
 </body>
 </html>
+<body>
+    <h1>test this should be below go to page 2 button</h1>
+</body>
